added UsersDTO