@@ -1,25 +1,21 @@
 package com.company.service;
 
-import com.company.UserDTO;
+import com.company.dto.UsersDTO;
 import com.company.entity.Role;
 import com.company.entity.User;
 import com.company.repository.UserRepository;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
-
-import java.lang.reflect.Array;
 import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
+import java.util.Collections;
 
 @Slf4j
 @Service
-public class UserService implements UserDetailsService {
+public class UserService {
 
     private final UserRepository userRepository;
 
@@ -27,34 +23,39 @@ public class UserService implements UserDetailsService {
         this.userRepository = userRepository;
     }
 
-    public void saveNewUser(User user) {
+    public boolean saveNewUser(User user) {
         try {
             checkUnique(user);
-            user.setAccountNonExpired(true);
-            user.setAccountNonLocked(true);
-            user.setCredentialsNonExpired(true);
-            user.setEnabled(true);
-            user.setAuthorities(Set.of(Role.USER));
+            user.setPassword(new BCryptPasswordEncoder().encode(user.getPassword()));
+            user.setActive(true);
+            user.setAuthorities(Collections.singleton(Role.USER));
             userRepository.save(user);
+            return true;
         } catch (SQLException e) {
             //e.printStackTrace();
             log.info("{this e-mail already exist}");
         }
+        return false;
     }
 
-    private void checkUnique(User user) throws SQLException{
+    private void checkUnique(User user) throws SQLException {
         User userByEmail = userRepository.findUserByEmail(user.getEmail());
         if (userByEmail != null) {
             throw new SQLException();
         }
     }
 
-    public List<User> getAllUsers() {
-        return userRepository.findAll();
+    public UsersDTO getAllUsers() {
+        return new UsersDTO(userRepository.findAll());
     }
 
-    @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        return userRepository.findUserByEmail(email);
+    private String getCurrentUsername() {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        return auth.getName();
     }
+
+    public User getCurrentUser() {
+        return userRepository.findUserByEmail(getCurrentUsername());
+    }
+
 }
